fixed bg issues with mobile nav and topnav and modified sidenav to show icon on collapsed instead of logo

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -477,6 +477,9 @@
   .bottom-8 {
     bottom: calc(var(--spacing) * 8);
   }
+  .bottom-15 {
+    bottom: calc(var(--spacing) * 15);
+  }
   .bottom-20 {
     bottom: calc(var(--spacing) * 20);
   }
@@ -3825,6 +3828,11 @@
       height: 100vh;
     }
   }
+  .lg\:max-h-screen {
+    @media (width >= 64rem) {
+      max-height: 100vh;
+    }
+  }
   .lg\:w-1\/3 {
     @media (width >= 64rem) {
       width: calc(1/3 * 100%);
@@ -3838,6 +3846,11 @@
   .lg\:w-2\/3 {
     @media (width >= 64rem) {
       width: calc(2/3 * 100%);
+    }
+  }
+  .lg\:w-7 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 7);
     }
   }
   .lg\:w-10 {
@@ -4175,6 +4188,11 @@
   .dark\:border-gray-800 {
     @media (prefers-color-scheme: dark) {
       border-color: var(--color-gray-800);
+    }
+  }
+  .dark\:border-gray-900 {
+    @media (prefers-color-scheme: dark) {
+      border-color: var(--color-gray-900);
     }
   }
   .dark\:bg-black {
